# flisol

./: .gitignore  Makefile  README.md  agenda.html  atividades.html  cfp.html  como-participar.html  edicoes.html  flisol.py  flisol.yaml  galeria.html  grade.html  index.html  inscricao.html  installfest.html  layout.html  local.html  patrocinadores.html  programacao.html  pyproject.toml  styles.css
.github/workflows/: deploy.yml
2017/: index.html  installfest.html  programacao.html  styles.css
2018/: index.html  inscricao.html  installfest.html  local.html  patrocinadores.html  programacao.html  styles.css
2019/: cfp.html  index.html  inscricao.html  installfest.html  local.html  patrocinadores.html  programacao.html
2019/static/images/: wget-log
2021/: agenda.html  cfp.html  como-participar.html  edicoes.html  galeria.html  index.html  inscricao.html  installfest.html  patrocinadores.html
2023/: agenda.html  cfp.html  edicoes.html  galeria.html  index.html  inscricao.html  installfest.html  patrocinadores.html
installfest/: index.html  styles.css
static/: styles.css
talks/: Cacti.pptx
templates/: agenda.html  base.html  cfp.html  edicoes.html  galeria.html  index.html  inscricao.html  installfest.html
